--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,4 +1,6 @@
 .footer {
     margin-left:auto !important ;
     margin-right: auto !important; 
+    background-color: rgb(236, 236, 236);
   }
+  
