adding styling to dashboard

--- a/client/src/components/calendarr/demo.css
+++ b/client/src/components/calendarr/demo.css
@@ -6,10 +6,10 @@
     color: white;
 }
 
-h5 {
+.MuiButton-label {
     color: white;
 }
 
-.MuiButton-label {
+.MuiTypography-h5 {
     color: white;
 }
